# BlackVocs

./: .commit_template  .gitignore  .prettier.config.js  README.md  ]  eslint.config.js  package-lock.json  package.json  requirements.txt
.github/: relase.yml
service/: .env.example  .gitignore  app.py  deepseek_test.py  docker-compose.yml  environment.yml  mongo_utils.py  requirements.txt
service/app/: .dockerignore  Dockerfile  auth_utils.py  config.py  jwt_auth.py  main.py  models.py  mongo_utils.py  pyproject.toml  pyrightconfig.json  requirements.txt  route_auth.py  schemas.py  start.sh  test.py
service/app/api/endpoints/: users.py
service/app/core/: config.py  const.py  database.py  errors.py  exception_handler.py  jwt_auth.py  oid.py
service/app/db/: db_user.py  session.py
service/app/models/: common.py  user.py  user_word.py  vocab_models.py  word.py
service/app/repositories/: session.py  user_repository.py  user_word_repository.py  word_repository.py
service/app/routes/: auth.py  route_auth.py  route_word.py  user.py  vocab.py  word.py  words.py
service/app/schemas/: auth.py  auth_schemas.py  common_schemas.py  user.py  user_schemas.py  vocab_schemas.py  word.py  word_schemas.py
service/app/services/: auth_service.py  generativeAI_service.py  word_service.py
service/app/utils/: auth_utils.py  fingerprint.py  generative_AI_client.py  user.py  user_utils.py  user_word.py  vocab_utils.py  word.py  word_utils.py
web/: .env.example  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
(+58 files in other folders)
